--- a/OnlineElectronicsStore/Views/Home/Index.cshtml
+++ b/OnlineElectronicsStore/Views/Home/Index.cshtml
@@ -1,9 +1,38 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model List<OnlineElectronicsStore.Domain.Entity.Navigation>
+@{
+    ViewData["Title"] = "Головна сторінка";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
-<p>Hello world
+<nav id="navigationFull">
+    <ul id="mainNav">
+        <li><i class="fa-solid fa-laptop"></i>Ноутбуки<i class="fa-solid fa-chevron-right rightborder"></i></li>
+        <li><i class="fa-solid fa-mobile-screen"></i>Смартфони<i class="fa-solid fa-chevron-right rightborder"></i></li>
+        <li><i class="fa-solid fa-headphones"></i>Навушники<i class="fa-solid fa-chevron-right rightborder"></i></li>
+        <li><i class="fa-solid fa-battery-full"></i>Power Bank<i class="fa-solid fa-chevron-right rightborder"></i></li>
+        <li><i class="fa-solid fa-tv"></i>Телевізори<i class="fa-solid fa-chevron-right rightborder"></i></li>
+        <li><i class="fa-solid fa-camera"></i>Фото і відео техніка<i class="fa-solid fa-chevron-right rightborder"></i></li>
+        <li><i class="fa-solid fa-tablet"></i>Планшети<i class="fa-solid fa-chevron-right rightborder"></i></li>
+        <li><i class="fa-solid fa-computer"></i>Комп'ютери<i class="fa-solid fa-chevron-right rightborder"></i></li>
+        <li><i class="fa-solid fa-desktop"></i>Монітори<i class="fa-solid fa-chevron-right rightborder"></i></li>
+        <li><i class="fa-solid fa-question"></i>Відеокарти<i class="fa-solid fa-chevron-right rightborder"></i></li>
+        <li><i class="fa-solid fa-question"></i>Процесори<i class="fa-solid fa-chevron-right rightborder"></i></li>
+        <li><i class="fa-solid fa-question"></i>Оперативна пам'ять<i class="fa-solid fa-chevron-right rightborder"></i></li>
+        <li><i class="fa-solid fa-question"></i>SSD<i class="fa-solid fa-chevron-right rightborder"></i></li>
+        <li><i class="fa-solid fa-question"></i>Материнська плата<i class="fa-solid fa-chevron-right rightborder"></i></li>
+    </ul>
+    <nav id="subcategory">
+        <h2>Бренди</h2>
+        <ul>
+            @foreach (var item in Model)
+            {
+                <li>item</li>
+            }
+    					
+            <li>Всі товари <i class="fa-solid fa-arrow-right-long"></i></li>
+        </ul>
+    </nav>
+</nav>
+		
+<article>
+			
+</article>
