--- a/OnlineElectronicsStore/wwwroot/css/_Layout/site.css
+++ b/OnlineElectronicsStore/wwwroot/css/_Layout/site.css
@@ -110,7 +110,8 @@ header nav
     position: relative;
 }
 
-.listHeader li::after {
+.listHeader li::after 
+{
     content: '';
     position: absolute;
     top: 0;
@@ -120,7 +121,8 @@ header nav
     background-color: white;
 }
 
-.listHeader li:last-child::after {
+.listHeader li:last-child::after
+{
     display: none;
 }
 
@@ -143,6 +145,8 @@ header nav
     font-size: 16px;
     position: absolute;
     width: 90vw;
+    height: 50vh;
+    overflow-y: auto;
 }
 
 #navigationFull #mainNav
@@ -211,6 +215,102 @@ article
 {
     position: relative;
     z-index: 2;
+    display: grid;
+    margin: 0 5vw;
+    grid-template-columns: repeat(auto-fit, minmax(15vw, 1fr));
+    grid-auto-rows: auto;
+    grid-auto-flow: row;
+    grid-gap: 5px;
+    font-size: 18px;
+}
+
+section
+{
+    display: grid;
+    grid-gap: 5px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.2);
+    padding: 15px;
+    align-items: center;
+    justify-items: center;
+    grid-template-areas: 
+	"imageProduct imageProduct"
+	"nameProduct nameProduct"
+	"stars wishList"
+	"priceProduct cart";
+}
+
+
+section img
+{
+    width: 100%;
+    grid-area: imageProduct;
+}
+
+.nameProduct
+{
+    grid-area: nameProduct;
+}
+
+.stars
+{
+    grid-area: stars;
+    display: inline-block;
+    font-size: 22px;
+}
+
+.stars:before
+{
+    content: '★★★★★';
+    letter-spacing: 3px;
+    color: #f03a59;
+}
+.stars[data-rating='1']:before { content: '★☆☆☆☆'; }
+.stars[data-rating='2']:before { content: '★★☆☆☆'; }
+.stars[data-rating='3']:before { content: '★★★☆☆'; }
+.stars[data-rating='4']:before { content: '★★★★☆'; }
+.stars[data-rating='5']:before { content: '★★★★★'; }
+
+.wishList
+{
+    grid-area: wishList;
+    background: transparent;
+    border: 0;
+    color: #e00027;
+    font-size: 18px;
+}
+
+.wishList:hover
+{
+    transition: 0.3s ease-out;
+    color: #f03a59;
+    cursor: pointer;
+    text-shadow: 0px 0px 10px rgba(0,0,0,1);
+}
+
+.priceProduct
+{
+    grid-area: priceProduct;
+    font-size: 20px;
+}
+
+.cart
+{
+    grid-area: cart;
+    background-color: #e00027;
+    color: white;
+    border: 0;
+    border-radius: 5px;
+    font-size: 16px;
+    padding: 10px 15px 10px 15px;
+}
+
+.cart:hover
+{
+    transition: 0.3s ease-out;
+    background: #f03a59;
+    cursor: pointer;
+    box-shadow: 0px 0px 15px 5px #CCA3AA;
 }
 
 footer
