--- a/OnlineElectronicsStore/Views/Home/ProductsCard.cshtml
+++ b/OnlineElectronicsStore/Views/Home/ProductsCard.cshtml
@@ -5,7 +5,7 @@
 	for (int i = 0; i < 5; i++)
 	{
 		<section>
-			<img src="@product.Image">
+			<img src="">
 			<p class="nameProduct">
 				<a>@product.Name</a>
 			</p>
