--- a/OnlineElectronicsStore/wwwroot/css/_Layout/site.css
+++ b/OnlineElectronicsStore/wwwroot/css/_Layout/site.css
@@ -54,6 +54,7 @@ header nav
 {
     background-color: #f03a59;
     transition: all 0.3s  ease-out;
+    cursor: pointer;
 }
 
 .btnCatalog i
@@ -92,6 +93,7 @@ header nav
 {
     background-color: #f03a59;
     transition: all 0.3s  ease-out;
+    cursor: pointer;
 }
 
 .listHeader
@@ -110,8 +112,7 @@ header nav
     position: relative;
 }
 
-.listHeader li::after 
-{
+.listHeader li::after {
     content: '';
     position: absolute;
     top: 0;
@@ -121,8 +122,7 @@ header nav
     background-color: white;
 }
 
-.listHeader li:last-child::after
-{
+.listHeader li:last-child::after {
     display: none;
 }
 
@@ -131,6 +131,7 @@ header nav
     background-color: #919996;
     transition: 0.4s ease-out;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 #navigationFull
@@ -217,7 +218,7 @@ article
     z-index: 2;
     display: grid;
     margin: 0 5vw;
-    grid-template-columns: repeat(auto-fit, minmax(15vw, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-auto-rows: auto;
     grid-auto-flow: row;
     grid-gap: 5px;
@@ -231,15 +232,13 @@ section
     border-radius: 10px;
     box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.2);
     padding: 15px;
-    align-items: center;
-    justify-items: center;
+    grid-template-rows: 45% 30% 10% 10%;
     grid-template-areas: 
 	"imageProduct imageProduct"
 	"nameProduct nameProduct"
 	"stars wishList"
 	"priceProduct cart";
 }
-
 
 section img
 {
@@ -291,6 +290,7 @@ section img
 .priceProduct
 {
     grid-area: priceProduct;
+    display: grid;
     font-size: 20px;
 }
 
@@ -302,7 +302,7 @@ section img
     border: 0;
     border-radius: 5px;
     font-size: 16px;
-    padding: 10px 15px 10px 15px;
+    padding: 0 15px 0 15px;
 }
 
 .cart:hover
@@ -312,6 +312,7 @@ section img
     cursor: pointer;
     box-shadow: 0px 0px 15px 5px #CCA3AA;
 }
+
 
 footer
 {
