--- a/OnlineElectronicsStore/Views/Home/Index.cshtml
+++ b/OnlineElectronicsStore/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
     OnlineElectronicsStore.Domain.Response.IBaseResponse<List<OnlineElectronicsStore.Domain.ViewModels.Product.ProductViewModel>>>
 @{
     ViewData["Title"] = "Головна сторінка";
+    Layout = "_Layout";
 }
 
 <nav id="navigationFull">
