--- a/OnlineElectronicsStore/Views/Shared/_Layout.cshtml
+++ b/OnlineElectronicsStore/Views/Shared/_Layout.cshtml
@@ -26,10 +26,18 @@
     			</form>
     			
     			<ul class="listHeader">
-    				<li><i class="fa-solid fa-user"></i></li>
-    				<li><i class="fa-solid fa-heart"></i></li>
-    				<li><i class="fa-solid fa-cart-shopping"></i></li>
-    			</ul>
+					<li class="userIcon"><i class="fa-solid fa-user"></i>
+                		<ul class="userMenu">
+                			<li>Мої замовлення</li>
+                	        <li>Мої відгуки</li>
+                	        <li>Особиста інформація</li>
+                	        <hr color="lightgray">
+                	        <li>Вийти з акаунта</li>
+                	    </ul>
+                	</li>
+                	<li><i class="fa-solid fa-heart"></i></li>
+                	<li><i class="fa-solid fa-cart-shopping"></i></li>
+                </ul>
     		</nav>
     	</header>
     
