--- a/OnlineElectronicsStore/wwwroot/css/_Layout/site.css
+++ b/OnlineElectronicsStore/wwwroot/css/_Layout/site.css
@@ -3,8 +3,8 @@
     margin: 0;
     padding: 0;
     display: grid;
-    grid-gap: 8px;
     height: 100vh;
+    grid-gap: 8px;
     grid-template-rows: 100px 1fr 100px;
     grid-template-columns: 200px 1fr;
     grid-template-areas: 
@@ -18,7 +18,6 @@
     display: grid;
     /*background: #303030;*/
 }
-
 
 header
 {
@@ -112,7 +111,8 @@ header nav
     position: relative;
 }
 
-.listHeader li::after {
+.listHeader li:after 
+{
     content: '';
     position: absolute;
     top: 0;
@@ -122,7 +122,8 @@ header nav
     background-color: white;
 }
 
-.listHeader li:last-child::after {
+.listHeader li:last-child:after 
+{
     display: none;
 }
 
@@ -132,6 +133,42 @@ header nav
     transition: 0.4s ease-out;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.listHeader .userMenu li:after
+{
+    display: none;
+}
+
+.listHeader li:hover .userMenu 
+{
+    display: block;
+}
+
+.userMenu 
+{
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #fff;
+    color: black;
+    list-style-type: none;
+    font-size: 16px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 999;
+    padding: 5px 0;
+}
+
+.userMenu li 
+{
+    padding: 10px 20px;
+}
+
+.userMenu li:hover 
+{
+    background-color: #f0f0f0;
+    border-radius: 0;
 }
 
 #navigationFull
@@ -212,112 +249,11 @@ main
     grid-area: main;
 }
 
-article
-{
-    position: relative;
-    z-index: 2;
-    display: grid;
-    margin: 0 5vw;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-auto-rows: auto;
-    grid-auto-flow: row;
-    grid-gap: 5px;
-    font-size: 18px;
-}
-
-section
-{
-    display: grid;
-    grid-gap: 5px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.2);
-    padding: 15px;
-    grid-template-rows: 45% 30% 10% 10%;
-    grid-template-areas: 
-	"imageProduct imageProduct"
-	"nameProduct nameProduct"
-	"stars wishList"
-	"priceProduct cart";
-}
-
-section img
-{
-    width: 100%;
-    grid-area: imageProduct;
-}
-
-.nameProduct
-{
-    grid-area: nameProduct;
-}
-
-.stars
-{
-    grid-area: stars;
-    display: inline-block;
-    font-size: 22px;
-}
-
-.stars:before
-{
-    content: '★★★★★';
-    letter-spacing: 3px;
-    color: #f03a59;
-}
-.stars[data-rating='1']:before { content: '★☆☆☆☆'; }
-.stars[data-rating='2']:before { content: '★★☆☆☆'; }
-.stars[data-rating='3']:before { content: '★★★☆☆'; }
-.stars[data-rating='4']:before { content: '★★★★☆'; }
-.stars[data-rating='5']:before { content: '★★★★★'; }
-
-.wishList
-{
-    grid-area: wishList;
-    background: transparent;
-    border: 0;
-    color: #e00027;
-    font-size: 18px;
-}
-
-.wishList:hover
-{
-    transition: 0.3s ease-out;
-    color: #f03a59;
-    cursor: pointer;
-    text-shadow: 0px 0px 10px rgba(0,0,0,1);
-}
-
-.priceProduct
-{
-    grid-area: priceProduct;
-    display: grid;
-    font-size: 20px;
-}
-
-.cart
-{
-    grid-area: cart;
-    background-color: #e00027;
-    color: white;
-    border: 0;
-    border-radius: 5px;
-    font-size: 16px;
-    padding: 0 15px 0 15px;
-}
-
-.cart:hover
-{
-    transition: 0.3s ease-out;
-    background: #f03a59;
-    cursor: pointer;
-    box-shadow: 0px 0px 15px 5px #CCA3AA;
-}
-
-
 footer
 {
     grid-area: footer;
     background: #303030;
+    bottom: 0;
 }
 
 footer h3
