--- a/OnlineElectronicsStore/Views/Home/ProductsCard.cshtml
+++ b/OnlineElectronicsStore/Views/Home/ProductsCard.cshtml
@@ -29,6 +29,12 @@
     	"priceProduct cart";
     }
     
+    section:hover
+    {
+        box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.6);
+        transition: 0.3s ease;
+    }
+    
     section img
     {
         width: 100%;
@@ -118,7 +124,4 @@
             <button class="cart"><i class="fa-solid fa-cart-shopping"></i></button>
         </section>
     }
-
 }
-
-
