--- a/OnlineElectronicsStore/Views/Home/ProductsCard.cshtml
+++ b/OnlineElectronicsStore/Views/Home/ProductsCard.cshtml
@@ -35,6 +35,20 @@
         transition: 0.3s ease;
     }
     
+    section a
+    {
+        text-decoration: none;
+        color: black;
+        font-size: 16px;
+        grid-column: 1 / span 2;
+        text-align: center;
+    }
+    
+    section a:visited
+    {
+        text-decoration: none;
+    }
+    
     section img
     {
         width: 100%;
@@ -114,10 +128,10 @@
     @foreach (var product in Model.Data)
     {
         <section>
-            <img src="data:image;base64,@Convert.ToBase64String(@product.ImageBase64)" alt="@product.Name">
-            <p class="nameProduct">
-                <a>@product.Name</a>
-            </p>
+            <a href="@Url.Action("ProductDetails", "Product", new { id = @product.Id })">
+                <img src="data:image;base64,@Convert.ToBase64String(@product.ImageBase64)" alt="@product.Name">
+                <p class="nameProduct">@product.Name</p>
+            </a>
             <div class="stars" data-rating="3"></div>
             <button class="wishList"><i class="fa-solid fa-heart"></i></button>
             <p class="priceProduct">@product.Price ₴</p>
