--- a/OnlineElectronicsStore/Views/Shared/_Layout.cshtml
+++ b/OnlineElectronicsStore/Views/Shared/_Layout.cshtml
@@ -34,7 +34,9 @@
 							    <li><i class="fa-solid fa-list-ul"></i>Мої замовлення</li>
 							    <li><i class="fa-solid fa-comment"></i>Мої відгуки</li>
 							    <hr color="lightgray">
-							    <li><i class="fa-solid fa-right-from-bracket"></i>Вийти з акаунта</li>
+							    <a asp-controller="Account" asp-action="Logout">
+								    <li><i class="fa-solid fa-right-from-bracket"></i>Вийти з акаунта</li>
+							    </a>
 						    </ul>
 					    </li>
 					    <li><i class="fa-solid fa-heart"></i></li>
@@ -44,7 +46,9 @@
 			    else
 			    {
 				    <ul class="listHeader">
-					    <a asp-controller="Account" asp-action="Login"><li class="userIcon"><i class="fa-solid fa-user"></i></li></a>
+					    <a asp-controller="Account" asp-action="Login">
+						    <li class="userIcon"><i class="fa-solid fa-user"></i></li>
+					    </a>
 					    <li><i class="fa-solid fa-heart"></i></li>
 					    <li><i class="fa-solid fa-cart-shopping"></i></li>
 				    </ul>
