--- a/OnlineElectronicsStore/Views/Home/ProductsCard.cshtml
+++ b/OnlineElectronicsStore/Views/Home/ProductsCard.cshtml
@@ -19,7 +19,7 @@
         display: grid;
         grid-gap: 5px;
         border-radius: 10px;
-        box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.2);
+        box-shadow: 0 0 10px 1px rgba(0,0,0,0.2);
         padding: 15px;
         grid-template-rows: 45% 30% 10% 10%;
         grid-template-areas: 
@@ -31,7 +31,7 @@
     
     section:hover
     {
-        box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.6);
+        box-shadow: 0 0 10px 1px rgba(0,0,0,0.6);
         transition: 0.3s ease;
     }
     
@@ -93,7 +93,7 @@
         transition: 0.3s ease-out;
         color: #f03a59;
         cursor: pointer;
-        text-shadow: 0px 0px 10px rgba(0,0,0,1);
+        text-shadow: 0 0 10px rgba(0,0,0,1);
     }
     
     .priceProduct
@@ -119,7 +119,7 @@
         transition: 0.3s ease-out;
         background: #f03a59;
         cursor: pointer;
-        box-shadow: 0px 0px 15px 5px #CCA3AA;
+        box-shadow: 0 0 15px 5px #CCA3AA;
     }
 </style>
 
@@ -129,7 +129,14 @@
     {
         <section>
             <a href="@Url.Action("ProductDetails", "Product", new { id = @product.Id })">
-                <img src="data:image;base64,@Convert.ToBase64String(@product.ImageBase64)" alt="@product.Name">
+                @if (@product.ImageBase64 != null)
+                {
+                    <img src="data:image;base64,@Convert.ToBase64String(@product.ImageBase64)" alt="@product.Name">
+                }
+                else
+                {
+                    <img alt="@product.Name" src="~/Resources/NullImage.png">
+                }
                 <p class="nameProduct">@product.Name</p>
             </a>
             <div class="stars" data-rating="3"></div>
