Бекап перед розбивкой на частини

--- a/OnlineElectronicsStore/Views/Home/Index.cshtml
+++ b/OnlineElectronicsStore/Views/Home/Index.cshtml
@@ -39,6 +39,7 @@
 </nav>
 
 <article>
+    @await Html.PartialAsync("_CartPartialView")
     @await Html.PartialAsync("ProductsCard", Model.Second)
 </article>
 
