--- a/OnlineElectronicsStore/Views/Shared/_Layout.cshtml
+++ b/OnlineElectronicsStore/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
 						    </ul>
 					    </li>
 					    <li><i class="fa-solid fa-heart"></i></li>
-					    <li><i class="fa-solid fa-cart-shopping"></i></li>
+					    <li id="cartIcon"><i class="fa-solid fa-cart-shopping"></i></li>
 				    </ul>
 			    }
 			    else
